Use language resource for perl counter

--- a/languages/English.json
+++ b/languages/English.json
@@ -43,6 +43,6 @@
     "menu_panel_label": "Menu",
     "complete_button": "Complete",
     "go_back_button": "Back to Menu",
-    "perls_score_label": "Perl: "
+    "perls_score_label": "Perl"
   }
 }
