--- a/languages/Russian.json
+++ b/languages/Russian.json
@@ -6,7 +6,8 @@
       "language_panel": "Язык:",
       "player_panel": "Игрок:",
       "create_new_player_button": "Новый игрок",
-      "exit_button": "На рабочий стол"
+      "exit_button": "На рабочий стол",
+      "reload_text": "Перегрузите, чтобы применить изменения"
     },
     "level_selector": {
       "go_back_button": "Назад",
@@ -26,14 +27,14 @@
       "pawn_action_panel": {
         "label": "Движение",
         "buttons": [
-          "Переместить Зеленого Вверх",
-          "Переместить Зеленого Направо",
-          "Переместить Зеленого Вниз",
-          "Переместить Зеленого Налево",
-          "Переместить Оранжевого Вверх",
-          "Переместить Оранжевого Напрвао",
-          "Переместить Оранжевого Вниз",
-          "Переместить Оранжевого Налево",
+          "Двигать Зеленого Вверх",
+          "Двигать Зеленого Направо",
+          "Двигать Зеленого Вниз",
+          "Двигать Зеленого Налево",
+          "Двигать Оранжевого Вверх",
+          "Двигать Оранжевого Направо",
+          "Двигать Оранжевого Вниз",
+          "Двигать Оранжевого Налево",
           "Собрать Жемчуг Зеленым",
           "Собрать Жемчуг Оранжевым"
         ],
