--- a/assets/languages/English.json
+++ b/assets/languages/English.json
@@ -45,7 +45,7 @@
     "menu_panel_label": "Menu",
     "complete_button": "Complete",
     "go_back_button": "Go Back",
-    "perls_score_label": "Perl"
+    "perls_score_label": "Pearl"
   },
   "scoreboard": {
     "title": "Scoreboard",
