Rename Tutorial mode button

--- a/assets/languages/English.json
+++ b/assets/languages/English.json
@@ -1,6 +1,6 @@
 {
   "main_menu": {
-    "tutorial_button": "Tutorial",
+    "tutorial_button": "Play",
     "challenge_button": "Challenge",
     "multiplayer_button": "Multiplayer",
     "scoreboard_button": "Scoreboard",
