--- a/assets/languages/Russian.json
+++ b/assets/languages/Russian.json
@@ -1,6 +1,6 @@
 {
   "main_menu": {
-    "tutorial_button": "Обучение",
+    "tutorial_button": "Играть",
     "challenge_button": "Вызов",
     "multiplayer_button": "Мультиплеер",
     "scoreboard_button": "Доска почета",
